--- a/.github/workflows/bt.yml
+++ b/.github/workflows/bt.yml
@@ -42,23 +42,16 @@ jobs:
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: ./coverage.all
-  release:
-    name: Release on GitHub
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    runs-on: ubuntu-latest 
     needs: [lint, test]
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      with:
-          fetch-depth: 0
-    - name: Validates GO releaser config
-      uses: goreleaser/goreleaser-action@v2
-      with:
-        version: latest
-        args: check
-    - name: Create release on GitHub
-      uses: goreleaser/goreleaser-action@v2
-      with:
-        args: release
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.17
+      - name: Check out code
+        uses: actions/checkout@v1
+      - name: Build
+        run: make build
