--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,26 @@
-name: Build and Test
+name: Release
 
 on:
   push:
     tags:
-      - '*'
+      - "*"
 
 jobs:
   release:
     name: Release on GitHub
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      with:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
           fetch-depth: 0
-    - name: Validates GO releaser config
-      uses: goreleaser/goreleaser-action@v2
-      with:
-        version: latest
-        args: check
-    - name: Create release on GitHub
-      uses: goreleaser/goreleaser-action@v2
-      with:
-        args: release
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+      - name: Create Release
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          args: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
