--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,40 +1,45 @@
-name: Build and Test
+name: Test
 
 on:
   workflow_dispatch:
   push:
     branches:
       - master
+      - 'releases/v*'
   pull_request:
+    branches:
+      - 'master'
+      - 'releases/v*'
 
 jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Set up Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
           go-version: 1.17
-
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Lint Go Code
-        run: |
-          export PATH=$PATH:$(go env GOPATH)/bin # temporary fix. See https://github.com/actions/setup-go/issues/14
-          go get -u golang.org/x/lint/golint 
-          make lint
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: latest
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
           go-version: 1.17
-      - name: Check out code
-        uses: actions/checkout@v2
       - name: Run Unit tests.
         run: make test-coverage
       - name: Upload Coverage report to CodeCov
