--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,11 +20,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Set up Go
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
-      - name: golangci-lint
+      - name: Lint
         uses: golangci/golangci-lint-action@v2
         with:
           version: latest
@@ -36,13 +36,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v1
+      - name: Setup Go
+        uses: actions/setup-go@v2
         with:
           go-version: 1.17
-      - name: Run Unit tests.
+      - name: Test
         run: make test-coverage
-      - name: Upload Coverage report to CodeCov
+      - name: Upload To CodeCov
         uses: codecov/codecov-action@v2
         with:
           token: ${{secrets.CODECOV_TOKEN}}
@@ -52,11 +52,13 @@ jobs:
     runs-on: ubuntu-latest 
     needs: [lint, test]
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup Go
+        uses: actions/setup-go@v2
         with:
           go-version: 1.17
-      - name: Check out code
-        uses: actions/checkout@v1
       - name: Build
         run: make build
